<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Messaging</string>
    <string name="share_intent_label">Messaging</string>
    <string name="share_intent_activity_label">Select conversation</string>
    <string name="action_settings">Settings</string>
    <string name="sendButtonContentDescription">Send Message</string>
    <string name="attachMediaButtonContentDescription">Add an attachment</string>
    <string name="next_with_arrow">Next &gt;</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="settings_with_arrow">Settings &gt;</string>
    <string name="settings">Settings</string>
    <string name="required_permissions_promo">Messaging needs permission to SMS, Phone and Contacts.</string>
    <string name="enable_permission_procedure">You can change permissions in Settings > Apps > Messaging > Permissions.</string>
    <string name="enable_permission_procedure_description">You can change permissions in Settings, Apps, Messaging, Permissions.</string>
    <string name="contact_picker_frequents_tab_title">Frequents</string>
    <string name="contact_picker_all_contacts_tab_title">All contacts</string>
    <string name="contact_list_send_to_text">Send to <xliff:g id="destination">%s</xliff:g></string>
    <string name="mediapicker_cameraChooserDescription">Capture pictures or video</string>
    <string name="mediapicker_galleryChooserDescription">Choose images from this device</string>
    <string name="mediapicker_audioChooserDescription">Record audio</string>
    <string name="mediapicker_contactChooserDescription">Choose a contact from this device</string>
    <string name="mediapicker_gallery_title">Choose media</string>
    <string name="mediapicker_gallery_item_selected_content_description">The media is selected.</string>
    <string name="mediapicker_gallery_item_unselected_content_description">The media is unselected.</string>
    <string name="mediapicker_audio_title">Record audio</string>
    <string name="mediapicker_contact_title">Choose a contact</string>
    <string name="contact_picker_hint_text">Click to open contacts list on this device</string>
    <string name="action_share">Share</string>
    <string name="posted_just_now">"Just now"</string>
    <string name="posted_now">"Now"</string>
    <plurals name="num_minutes_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> min</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> mins</item>
    </plurals>
    <plurals name="num_hours_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> hour</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="num_days_ago">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> day</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <string name="class_0_message_activity">Class 0 message</string>
    <string name="save">Save</string>
    <string name="enter_phone_number_title">Confirm your phone number</string>
    <string name="enter_phone_number_text">This one-time step will ensure Messaging will deliver your group messages properly.</string>
    <string name="enter_phone_number_hint">Phone number</string>
    <string name="incoming_text_sender_content_description"><xliff:g id="sender">%s</xliff:g> said</string>
    <string name="outgoing_text_sender_content_description">You said</string>
    <string name="incoming_sender_content_description">Message from <xliff:g id="sender">%s</xliff:g></string>
    <string name="outgoing_sender_content_description">You sent a message</string>
    <string name="message_status_sending">Sending&#8230;</string>
    <string name="message_status_send_failed">Not sent. Tap to try again.</string>
    <string name="message_status_send_retrying">Not sent. Trying again&#8230;</string>
    <string name="message_status_resend">Resend or delete</string>
    <string name="message_status_send_failed_emergency_number">Please make a voice call to emergency services. Your text message could not be delivered at this time.</string>
    <string name="message_title_manual_download">New MMS message to download</string>
    <string name="message_title_downloading">New MMS message</string>
    <string name="message_title_download_failed">Couldn\'t download</string>
    <string name="message_status_download_failed">Tap to try again</string>
    <string name="message_status_download">Tap to download</string>
    <string name="message_status_download_action">Download or delete</string>
    <string name="message_status_downloading">Downloading&#8230;</string>
    <string name="message_status_download_error">Message expired or not available</string>
    <string name="mms_info">size: <xliff:g id="messageSize">%1$s</xliff:g>, expiration: <xliff:g id="messageExpire">%2$s</xliff:g></string>
    <string name="unknown_sender">Unknown sender</string>
    <string name="delivered_status_content_description">Delivered</string>
    <string name="notification_send_failures_line1_singular">Message not sent</string>
    <string name="notification_send_failures_line1_plural">Some messages not sent in Messaging</string>
    <plurals name="notification_send_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <string name="notification_download_failures_line1_singular">Message not downloaded</string>
    <string name="notification_download_failures_line1_plural">Some messages not downloaded in Messaging</string>
    <plurals name="notification_download_failures">
        <item quantity="one"><xliff:g id="messages">%d</xliff:g> messages in one conversation</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> messages in <xliff:g id="conversations">%d</xliff:g> conversations</item>
    </plurals>
    <string name="notification_emergency_send_failure_line1">Message to <xliff:g id="number">%1$s</xliff:g> not sent</string>
    <string name="notification_emergency_send_failure_line2">
        Please make a voice call to emergency services. Your text message to
        <xliff:g id="number">%1$s</xliff:g> could not be delivered at this time.
    </string>
    <plurals name="notification_new_messages">
        <item quantity="one">New message</item>
        <item quantity="other"><xliff:g id="messages">%d</xliff:g> new messages</item>
    </plurals>
    <string name="back">Back</string>
    <string name="action_menu_show_archived">Archived</string>
    <string name="action_delete">Delete</string>
    <string name="action_archive">Archive</string>
    <string name="action_unarchive">Unarchive</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_download">Download</string>
    <string name="action_send">Send</string>
    <string name="action_delete_message">Delete</string>
    <string name="delete_message_confirmation_dialog_title">Delete this message?</string>
    <string name="delete_message_confirmation_dialog_text">This action cannot be undone.</string>
    <string name="delete_message_confirmation_button">Delete</string>
    <plurals name="delete_conversations_confirmation_dialog_title">
        <item quantity="one">Delete this conversation?</item>
        <item quantity="other">Delete these conversations?</item>
    </plurals>
    <string name="delete_conversation_confirmation_button">Delete</string>
    <string name="delete_conversation_decline_button">Cancel</string>
    <string name="recipient_hint">To</string>
    <string name="attachment_more_items">+<xliff:g id="count">%d</xliff:g></string>
    <string name="audio_recording_start_failed">Can\'t record audio. Try again.</string>
    <string name="audio_recording_replay_failed">Can\'t play audio. Try again.</string>
    <string name="audio_recording_error"> Couldn\'t save audio. Try again.</string>
    <string name="audio_picker_hint_text">Tap &amp; hold</string>
    <string name="enumeration_comma">,\u0020</string>
    <string name="notification_separator">\u0020\u0020</string>
    <string name="notification_ticker_separator">:\u0020</string>
    <string name="notification_space_separator">\u0020\u0020</string>
    <string name="notification_picture">Picture</string>
    <string name="notification_audio">Audio clip</string>
    <string name="notification_video">Video</string>
    <string name="notification_vcard">Contact card</string>
    <string name="notification_download_mms">Download</string>
    <string name="notification_reply_via_sms">Reply via SMS</string>
    <string name="notification_reply_via_mms">Reply via MMS</string>
    <string name="notification_reply_prompt">Reply</string>
    <string name="ellipsis" translatable="false">...</string>
    <plurals name="wearable_participant_count">
        <item quantity="one"><xliff:g id="count">%d</xliff:g> participant</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> participants</item>
    </plurals>
    <string name="unknown_self_participant">Me</string>
    <string name="blocked_toast_message">Contact blocked &amp; archived</string>
    <string name="unblocked_toast_message">Contact unblocked &amp; unarchived</string>
    <string name="archived_toast_message"><xliff:g id="count">%d</xliff:g> archived</string>
    <string name="unarchived_toast_message"><xliff:g id="count">%d</xliff:g> unarchived</string>
    <string name="toast_after_setting_default_sms_app_for_message_send">All set. Tap Send again.</string>
    <string name="otp_auto_copy_title">Automatically copy verification codes</string>
    <string name="otp_auto_copy_summary">Copies a detected code from newly received SMS messages</string>
    <string name="otp_show_toast_title">Show copy confirmation</string>
    <string name="otp_show_toast_summary">Show a short message after a code is copied</string>
    <string name="otp_rules_title">Recognition rules</string>
    <string name="otp_rules_summary">Drag to set priority. Swipe custom rules left to delete.</string>
    <string name="otp_add_rule">Add rule</string>
    <string name="otp_rule_name_hint">Rule name</string>
    <string name="otp_rule_pattern_hint">Regular expression</string>
    <string name="otp_rule_test_message_hint">Test SMS message</string>
    <string name="otp_preview_title">Live preview</string>
    <string name="category_settings_summary">Sort messages into personal, notifications, promotions, and more</string>
    <string name="category_add_custom">New category</string>
    <string name="category_reset_action">Reset to defaults</string>
    <string name="category_name_hint">Category name</string>
    <string name="category_icon_hint">Material icon</string>
    <string name="category_choose_color">Choose color</string>
    <string name="category_rules_title">Matching rules</string>
    <string name="category_add_rule">Add rule</string>
    <string name="category_test_sms_hint">Test SMS content</string>
    <string name="category_test_rules">Test rules</string>
    <string name="sms_card_enabled_title">Enable SMS card parsing</string>
    <string name="sms_card_enabled_summary">SMS text stays on this device and is never uploaded</string>
    <string name="sms_card_confidence_title">Minimum confidence</string>
    <string name="sms_card_types_title">Card types</string>
    <string name="sms_card_history_title">Card history</string>
    <string name="sms_card_clear_action">Clear all card cache</string>
    <string name="sms_card_advanced_title">Advanced</string>
    <string name="sms_card_import">Import custom rule file</string>
    <string name="sms_card_export">Export current rules</string>
    <string name="sms_card_external_title">Allow external app access</string>
</resources>